# SolHacks-Project

./: .env.example  .firebaserc  README.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.css  index.html  metadata.json  package-lock.json  package.json  server.ts
SoH/: Anchor.toml  package-lock.json  package.json
SoH/client/: client.ts  programConfig.ts
SoH/client/frontend/src/: App 2.tsx  App.tsx  main.tsx  programClient.ts
SoH/programs/civic-actions/: Cargo.toml
SoH/programs/civic-actions/src/: lib.rs
SoH/tests/: anchor.ts
src/: App.tsx  firebase.ts  index.css  main.tsx  types.ts
src/components/: AILawyer.tsx  AnalyticsView.tsx  AskAIFloatingButton.tsx  BillSimulator.tsx  CommunityView.tsx  CompareLaws.tsx  CourtSimulator.tsx  Header.tsx  LawCard.tsx  LawFeed.tsx  LawWorkflow.tsx  LocationSelector.tsx  MapView.tsx  ProtestGuide.tsx  RepresentativeCard.tsx  RoadmapView.tsx  SolanaCivicActions.tsx  SolanaWalletProvider.tsx
src/constants/: languages.ts
src/services/: communityService.ts  geminiService.ts
src/solana/: config.ts
src/utils/: confetti.ts
